--- a/01-gallery.html
+++ b/01-gallery.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Exercise 1</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Image gallery</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox/dist/basicLightbox.min.css">
-    <style>
-        /* Add any custom styles here */
-    </style>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <p><a href="index.html">Go back</a></p>
+
+    <!-- Gallery Container -->
     <ul class="gallery"></ul>
-    <script src="01-gallery.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox/dist/basicLightbox.min.js"></script>
+    <script src="js/01-gallery.js" type="module"></script>
 </body>
 
 </html>
